# Pbx_Routing

./: .gitignore  Integration.md  PROJECT.md  README.md  TWILIO_YEASTAR_SETUP_GUIDE.md  pyproject.toml
pbx_integration/: hooks.py  modules.txt  patches.txt
pbx_integration/api/: auth.py  call.py  lookup.py  webhook.py
pbx_integration/pbx_integration/: __init__.py
pbx_integration/pbx_integration/doctype/pbx_call_log/: pbx_call_log.json  pbx_call_log.py
pbx_integration/pbx_integration/doctype/pbx_settings/: pbx_settings.js  pbx_settings.json  pbx_settings.py
pbx_integration/pbx_integration/doctype/pbx_user_extension/: pbx_user_extension.json  pbx_user_extension.py
pbx_integration/public/css/: pbx_webrtc.css
pbx_integration/public/js/: pbx_click_to_call.js  pbx_screen_pop.js  pbx_telephony.js  pbx_webrtc.js
